// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render device list 1`] = `
.c11 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 24px;
  width: 604px;
}

.c2 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c3 {
  box-sizing: border-box;
}

.c14 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 40px;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.175px;
  width: 100%;
}

.c14:focus-visible,
.teleport-button__force-focus-visible .c14 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c14:hover,
.teleport-button__force-hover .c14 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c14:active,
.teleport-button__force-active .c14 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c14:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: transparent;
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255,255,255,0.18);
  border-width: 1.5px;
  padding: 0 6.5px;
  min-height: 24px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c13:focus-visible,
.teleport-button__force-focus-visible .c13 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c13:hover,
.teleport-button__force-hover .c13 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c13:active,
.teleport-button__force-active .c13 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c13:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px rgba(0, 0, 0, 0.14),0px 1px 18px rgba(0, 0, 0, 0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 14px;
  font-weight: 300;
  line-height: 24px;
  letter-spacing: 0.035px;
  color: rgba(255, 255, 255, 0.72);
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
  margin-bottom: 16px;
  color: rgba(255, 255, 255, 0.72);
  text-align: center;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  margin-bottom: 16px;
  color: rgba(255, 255, 255, 0.72);
  text-align: center;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
}

p+.c7 {
  margin-top: 16px;
  margin-bottom: 16px;
}

.c9 {
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c9>thead>tr>th,
.c9>tbody>tr>th,
.c9>tfoot>tr>th,
.c9>thead>tr>td,
.c9>tbody>tr>td,
.c9>tfoot>tr>td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c9>thead>tr>th:first-child,
.c9>tbody>tr>th:first-child,
.c9>tfoot>tr>th:first-child,
.c9>thead>tr>td:first-child,
.c9>tbody>tr>td:first-child,
.c9>tfoot>tr>td:first-child {
  padding-left: 24px;
}

.c9>thead>tr>th:last-child,
.c9>tbody>tr>th:last-child,
.c9>tfoot>tr>th:last-child,
.c9>thead>tr>td:last-child,
.c9>tbody>tr>td:last-child,
.c9>tfoot>tr>td:last-child {
  padding-right: 24px;
}

.c9>tbody>tr>td {
  vertical-align: middle;
}

.c9>thead>tr>th {
  color: #FFFFFF;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  line-height: 24px;
  cursor: pointer;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  white-space: nowrap;
}

.c9>thead>tr>th svg {
  height: 12px;
}

.c9>tbody>tr>td {
  color: #FFFFFF;
  font-weight: 300;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.035px;
}

.c9 tbody tr {
  transition: all 150ms;
  position: relative;
  border-top: 2px solid rgba(255,255,255,0.07);
}

.c9 tbody tr:hover {
  border-top: 2px solid rgba(0,0,0,0);
  background-color: #222C59;
}

.c9 tbody tr:hover:after {
  box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.12),0px 4px 5px 0px rgba(0, 0, 0, 0.14),0px 2px 4px -1px rgba(0, 0, 0, 0.20);
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
}

.c9 tbody tr:hover +tr {
  border-top: 2px solid rgba(0,0,0,0);
}

.c10 {
  border-radius: 8px;
  overflow: hidden;
  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),0px 1px 1px rgba(0, 0, 0, 0.14),0px 1px 3px rgba(0, 0, 0, 0.12);
}

.c10>tbody>tr td {
  vertical-align: middle;
  height: 32px;
}

.c10>tbody {
  background: #344179;
}

.c10>thead>tr>th {
  background: rgba(255,255,255,0.13);
}

<div
  class="c0 c1"
  width="604px"
>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        color="text.slightlyMuted"
      >
        Step 
        3
         of 
        4
      </div>
      <h2
        class="c5"
      >
        Device Successfully Enrolled
      </h2>
    </div>
  </div>
  <p
    class="c6 c7 sc-fpSrms c8"
    color="text.slightlyMuted"
  >
    Take a look at your enrolled devices below and remove any that you don't need anymore.
  </p>
  <div
    class="c2"
  >
    <table
      class="c9 c10"
      style="overflow: hidden; border-radius: 8px;"
    >
      <thead>
        <tr>
          <th
            style="cursor: default;"
          >
            Type
          </th>
          <th
            style="cursor: default;"
          >
            Device Name
          </th>
          <th>
            <a
              style="display: flex; align-items: center;"
            >
              Registered
              <span
                class="c11 icon icon-chevrondown"
                title="sort items desc"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </a>
          </th>
          <th>
            <a
              style="display: flex; align-items: center;"
            >
              Last Used
              <span
                class="c11 icon icon-chevronsvertical"
                title="sort items"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                  />
                  <path
                    d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                  />
                </svg>
              </span>
            </a>
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Authenticator App
          </td>
          <td
            title="iphone 12"
          >
            <div
              class="c12"
              style="max-width: 96px; white-space: nowrap;"
            >
              iphone 12
            </div>
          </td>
          <td>
            2021-08-12
          </td>
          <td>
            2021-08-12
          </td>
          <td
            align="right"
          />
        </tr>
        <tr>
          <td>
            Hardware Key
          </td>
          <td
            title="solokey"
          >
            <div
              class="c12"
              style="max-width: 96px; white-space: nowrap;"
            >
              solokey
            </div>
          </td>
          <td>
            2021-06-15
          </td>
          <td>
            2021-06-18
          </td>
          <td
            align="right"
          >
            <button
              class="c13"
              fill="border"
              title=""
            >
              Remove
            </button>
          </td>
        </tr>
        <tr>
          <td>
            Hardware Key
          </td>
          <td
            title="backup yubikey"
          >
            <div
              class="c12"
              style="max-width: 96px; white-space: nowrap;"
            >
              backup yubikey
            </div>
          </td>
          <td>
            2021-04-18
          </td>
          <td>
            2021-07-16
          </td>
          <td
            align="right"
          >
            <button
              class="c13"
              fill="border"
              title=""
            >
              Remove
            </button>
          </td>
        </tr>
        <tr>
          <td>
            Hardware Key
          </td>
          <td
            title="yubikey"
          >
            <div
              class="c12"
              style="max-width: 96px; white-space: nowrap;"
            >
              yubikey
            </div>
          </td>
          <td>
            2021-02-05
          </td>
          <td>
            2021-02-28
          </td>
          <td
            align="right"
          >
            <button
              class="c13"
              fill="border"
              title=""
            >
              Remove
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="c14"
    fill="filled"
    type="submit"
    width="100%"
  >
    Continue
  </button>
</div>
`;

exports[`render device removal dialog 1`] = `
.c4 {
  box-sizing: border-box;
  width: 400px;
}

.c12 {
  box-sizing: border-box;
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #FF6257;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  margin-right: 16px;
}

.c13:focus-visible,
.teleport-button__force-focus-visible .c13 {
  background-color: #FF6257;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #FF6257;
}

.c13:hover,
.teleport-button__force-hover .c13 {
  background-color: #FF8179;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c13:active,
.teleport-button__force-active .c13 {
  background-color: #FFA19A;
  border-color: transparent;
  color: #000000;
}

.c13:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c14 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c14:focus-visible,
.teleport-button__force-focus-visible .c14 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c14:hover,
.teleport-button__force-hover .c14 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c14:active,
.teleport-button__force-active .c14 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c14:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
  margin-bottom: 24px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 16px;
  font-weight: 300;
  line-height: 24px;
  letter-spacing: 0.08px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  color: #FFFFFF;
}

p+.c9 {
  margin-top: 16px;
}

.c5 {
  display: flex;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
}

.c6 {
  margin-bottom: 32px;
  flex: 1;
  flex-direction: column;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5 c6"
        width="400px"
      >
        <h2
          class="c7"
        >
          Remove Device
        </h2>
        <p
          class="c8 c9 sc-fpSrms c10"
        >
          Are you sure you want to remove device
           
          <span
            class="c11"
            color="text.main"
          >
            yubikey
          </span>
           
          ?
        </p>
      </div>
      <div
        class="c12"
      >
        <button
          class="c13"
          fill="filled"
        >
          Remove
        </button>
        <button
          class="c14"
          fill="filled"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`render failed state for device list 1`] = `
.c12 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c9 {
  box-sizing: border-box;
  margin: 0 0 24px 0;
  min-height: 40px;
  border: 2px solid;
  border-radius: 8px;
  margin: 0;
  border-color: #FF6257;
}

.c9 a {
  color: #FFFFFF;
}

.c10 {
  padding: 12px 16px;
  overflow: auto;
  word-break: break-word;
  display: flex;
  align-items: center;
  background: rgba(255, 98, 87, 0.1);
}

.c11 {
  border-radius: 50%;
  line-height: 0;
  margin-right: 16px;
  color: #000000;
  background: #FF6257;
  padding: 8px;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 24px;
  width: 604px;
}

.c2 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c3 {
  box-sizing: border-box;
}

.c13 {
  box-sizing: border-box;
  flex: 1;
}

.c15 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 40px;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.175px;
  width: 100%;
}

.c15:focus-visible,
.teleport-button__force-focus-visible .c15 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c15:hover,
.teleport-button__force-hover .c15 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c15:active,
.teleport-button__force-active .c15 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c15:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px rgba(0, 0, 0, 0.14),0px 1px 18px rgba(0, 0, 0, 0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 14px;
  font-weight: 300;
  line-height: 24px;
  letter-spacing: 0.035px;
  color: rgba(255, 255, 255, 0.72);
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
  margin-bottom: 16px;
  color: rgba(255, 255, 255, 0.72);
  text-align: center;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  margin-bottom: 16px;
  color: rgba(255, 255, 255, 0.72);
  text-align: center;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
}

p+.c7 {
  margin-top: 16px;
  margin-bottom: 16px;
}

<div
  class="c0 c1"
  width="604px"
>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        color="text.slightlyMuted"
      >
        Step 
        3
         of 
        4
      </div>
      <h2
        class="c5"
      >
        Device Successfully Enrolled
      </h2>
    </div>
  </div>
  <p
    class="c6 c7 sc-fpSrms c8"
    color="text.slightlyMuted"
  >
    Take a look at your enrolled devices below and remove any that you don't need anymore.
  </p>
  <div
    class="c2"
  >
    <div
      class="c9"
      kind="danger"
    >
      <div
        class="c10"
        kind="danger"
      >
        <div
          class="c11"
          kind="danger"
        >
          <span
            class="c12 icon icon-warning"
          >
            <svg
              fill="currentColor"
              height="16"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M12 9C12.4142 9 12.75 9.33579 12.75 9.75V13.5C12.75 13.9142 12.4142 14.25 12 14.25C11.5858 14.25 11.25 13.9142 11.25 13.5V9.75C11.25 9.33579 11.5858 9 12 9Z"
              />
              <path
                d="M12 17.8125C12.5178 17.8125 12.9375 17.3928 12.9375 16.875C12.9375 16.3572 12.5178 15.9375 12 15.9375C11.4822 15.9375 11.0625 16.3572 11.0625 16.875C11.0625 17.3928 11.4822 17.8125 12 17.8125Z"
              />
              <path
                clip-rule="evenodd"
                d="M10.09 3.34287L1.88101 17.7086C1.04292 19.1753 2.10193 21.0001 3.79114 21.0001H20.2092C21.8984 21.0001 22.9574 19.1753 22.1193 17.7086L13.9103 3.34287C13.0657 1.86488 10.9346 1.86488 10.09 3.34287ZM3.18337 18.4528L11.3924 4.08708C11.6611 3.61681 12.3392 3.61681 12.6079 4.08708L20.8169 18.4528C21.0836 18.9195 20.7466 19.5001 20.2092 19.5001H3.79114C3.25367 19.5001 2.91671 18.9195 3.18337 18.4528Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="c13"
        >
          <div
            class="c14"
          >
            failed to fetch devices
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    class="c15"
    fill="filled"
    type="submit"
    width="100%"
  >
    Continue
  </button>
</div>
`;
